<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GoodWeather</string>
    <string name="china">China</string>
    <string name="dialog_loading">Loading...</string>
    <string name="dialog_load_fail">Load fail</string>
    <string name="date">Date</string>
    <string name="weather">Weather</string>
    <string name="temp_max">Temp max</string>
    <string name="temp_min">Temp min</string>
    <string name="forecast">Forecast</string>
    <string name="air_quality">Air Quality</string>
    <string name="aqi_index">AQI Index</string>
    <string name="pm25_index">PM2.5 Index</string>
    <string name="life_suggestion">Life Suggestion</string>
    <string name="get_weather_data_fail">Get the weather data fail.</string>
    <string name="get_weather_data_success">Get the weather data successed.</string>
    <string name="comf_index">Comfort Index:</string>
    <string name="carwash_index">Wash car Index:</string>
    <string name="sport_index">Sport Index:</string>
    <string name="update_time">Update time</string>
    <string name="menu_setting">setting</string>
    <string name="menu_exit">quit</string>
    <string name="nav_city">City</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_about">About</string>
    <string name="pressed_again_exit">Pressed again to exit</string>
    <string name="download_pic">Download picture</string>
    <string name="data_return_null">Data return null</string>
    <string name="add_city">Add City</string>
    <string name="delete_city">Delete City</string>
    <string name="if_update_picture">If update picture everyday?</string>
    <string name="if_auto_update_data">Regularly update the data？</string>
    <string name="version_name">Version Name：</string>
    <string name="hint_download_url">Please put download URL here</string>
    <string name="start_download">Start Download</string>
    <string name="pause_download">Pause Download</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="download_url_null">Download url null</string>
    <string name="can_not_download">Refused permission will not be able to use download function</string>
    <string name="downloading">Downloading...</string>
    <string name="download_success">Download Success</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_paused">Download Paused</string>
    <string name="download_canceled">Download Canceled</string>

</resources>
