<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical"
     android:background="@color/half_transparent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/forecast"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:text="预报" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left"
            android:text="@string/date"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="日期" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/weather"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="天气" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp_min"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="最低" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp_min"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="最高" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/forcast_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>