<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin_to_window"
    android:background="@color/half_transparent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/aqi_quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_title"
        android:layout_marginTop="@dimen/layout_margin_title"
        android:text="@string/air_quality"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_mid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/aqi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_index"
                tools:text="63" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/aqi_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/padding_content"
                android:text="@string/aqi_index"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/pm25_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_index"
                tools:text="63" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pm25_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/padding_content"
                android:text="@string/pm25_index"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>